--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="Polina Lipskaya" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Polina Lipskaya</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -44,7 +44,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Philadelphia, PA  
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        <a href="mailto:polinalipskaya2021@gmail.com">polinalipskaya2021@gmail.com</a>
                     </div>
                     <p class="lead mb-5"> Business Analyst with over 3 years of experience in healthcare, marketing, and operations environments. Skilled in improving operational workflows and delivering actionable, data-driven insights. </p>
                     <div class="social-icons">
