--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         <div class="row g-4 align-items-start">
           <div class="col-12 col-lg-7">
             <h2 class="section-title">About Me</h2>
-            <p>I’m a Business Analyst working at the intersection of healthcare, data analytics, and user experience. My work focuses on solving operational challenges — from building invoice dashboards that uncover cost efficiencies, to designing surveys that transform customer service, to creating playbooks that bring structure to vendor management.</p>
-            <p>I hold a degree in Economics and Analytics from Haverford College, where my thesis explored machine learning models for predicting frailty in elderly patients. I enjoy exploring healthcare innovation, especially women’s health technology and digital care solutions.</p>
+            <p>I’m a Business Analyst working at the intersection of healthcare, data analytics, and user experience. My work focuses on solving operational challenges: from building invoice dashboards that uncover cost efficiencies, to designing surveys that transform customer service, to creating playbooks that bring structure to vendor management.</p>
+            <p>I enjoy exploring healthcare innovation, especially women’s health technology and digital care solutions.</p>
             <ul>
               <li>Built an invoice tracking dashboard across two vendors, improving variance transparency and cost-per-call insight.</li>
               <li>Developed a predictive model using metabolomic data (XGBoost, SHAP) for research-grade insights.</li>
@@ -182,7 +182,7 @@
         <h2 class="section-title mb-3">Contact</h2>
         <p class="lead">Interested in working together or have a question? I’d love to hear from you.</p>
         <ul class="list-unstyled fs-5">
-          <li class="mb-2"><i class="bi bi-envelope"></i> <a href="mailto:polina@example.com">polina@example.com</a></li>
+          <li class="mb-2"><i class="bi bi-envelope"></i> <a href="mailto:polinalipskaya2021@gmail.com">polina/a></li>
           <li><i class="bi bi-linkedin"></i> <a href="https://www.linkedin.com/in/polinalipskaya" target="_blank" rel="noopener">linkedin.com/in/polinalipskaya</a></li>
         </ul>
       </div>
