--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-12 col-lg-7">
             <span class="pill mb-3"><i class="bi bi-activity"></i> Business Analyst · Healthcare Strategy · Data</span>
             <h1 class="display-5 fw-bold mt-3">Business Analyst | Healthcare Strategy | Data-Driven Problem Solver</h1>
-            <p class="lead mt-3">Hi, I’m Polina Lipskaya — I improve healthcare operations through data, strategy, and design thinking. I build systems that optimize vendor performance, streamline processes, and uncover insights that drive better outcomes for patients and members.</p>
+            <p class="lead mt-3">Hi, I’m Polina Lipskaya! I improve healthcare operations through data, strategy, and design thinking. I build systems that optimize vendor performance, streamline processes, and uncover insights that drive better outcomes for patients and members.</p>
             <div class="d-flex gap-3 mt-4">
               <a class="btn btn-primary btn-lg" href="#projects">View My Work</a>
               <a class="btn btn-outline-secondary btn-lg" href="#" target="_blank" rel="noopener">Download Resume</a>
@@ -124,7 +124,7 @@
       <div class="container">
         <h3 class="mb-3">Improving Financial Transparency Through an Invoice Dashboard</h3>
         <p><strong>Challenge.</strong> Leadership lacked a single source of truth for vendor invoices across multiple lines of business, limiting visibility into variance, call costs, and bonus/training fees.</p>
-        <p><strong>Approach.</strong> Built an Excel dashboard consolidating two vendors (V1: Provider & Member; V2: six LOBs) with monthly billed amounts, bonuses, training, budget vs. actual variance, and call volume integration for cost-per-call.</p>
+        <p><strong>Approach.</strong> Built an Excel dashboard consolidating two vendors with monthly billed amounts, bonuses, training, budget vs. actual variance, and call volume integration for cost-per-call.</p>
         <p><strong>Impact.</strong> Delivered clear monthly snapshots, reduced reconciliation time, enabled data-driven vendor decisions, and created a scalable framework.</p>
       </div>
     </section>
@@ -159,7 +159,7 @@
               <li>Built an invoice tracking dashboard across two vendors, improving variance transparency and cost-per-call insight.</li>
               <li>Developed a predictive model using metabolomic data (XGBoost, SHAP) for research-grade insights.</li>
               <li>Designed and rolled out surveys to evaluate vendor operations in a customer service transformation program.</li>
-              <li>Tools: Tableau, Excel, Alteryx, Python; plus agile PM practices and stakeholder comms.</li>
+              <li>Tools: Tableau, Excel, Python; plus agile PM practices and stakeholder comms.</li>
             </ul>
           </div>
           <div class="col-12 col-lg-5">
