--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-12 col-lg-7">
             <span class="pill mb-3"><i class="bi bi-activity"></i> Business Analyst · Healthcare Strategy · Data</span>
             <h1 class="display-5 fw-bold mt-3">Business Analyst | Healthcare Strategy | Data-Driven Problem Solver</h1>
-            <p class="lead mt-3">Hi, I’m Polina Lipskaya! I improve healthcare operations through data, strategy, and design thinking. I build systems that optimize vendor performance, streamline processes, and uncover insights that drive better outcomes for patients and members.</p>
+            <p class="lead mt-3">Hi, I’m Polina Lipskaya! I enhance healthcare operations through data-driven insights and strategic planning. I build systems that optimize performance, streamline processes, and uncover insights that drive better outcomes for patients and members.</p>
             <div class="d-flex gap-3 mt-4">
               <a class="btn btn-primary btn-lg" href="#projects">View My Work</a>
               <a class="btn btn-outline-secondary btn-lg" href="#" target="_blank" rel="noopener">Download Resume</a>
@@ -182,7 +182,7 @@
         <h2 class="section-title mb-3">Contact</h2>
         <p class="lead">Interested in working together or have a question? I’d love to hear from you.</p>
         <ul class="list-unstyled fs-5">
-          <li class="mb-2"><i class="bi bi-envelope"></i> <a href="mailto:polinalipskaya2021@gmail.com">polina/a></li>
+          <li class="mb-2"><i class="bi bi-envelope"></i> <a href="mailto:polinalipskaya2021@gmail.com">polina</a>a></li>
           <li><i class="bi bi-linkedin"></i> <a href="https://www.linkedin.com/in/polinalipskaya" target="_blank" rel="noopener">linkedin.com/in/polinalipskaya</a></li>
         </ul>
       </div>
