--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p class="lead mt-3">Hi, I’m Polina Lipskaya! I enhance healthcare operations through data-driven insights and strategic planning. I build systems that optimize performance, streamline processes, and uncover insights that drive better outcomes for patients and members.</p>
             <div class="d-flex gap-3 mt-4">
               <a class="btn btn-primary btn-lg" href="#projects">View My Work</a>
-              <a class="btn btn-outline-secondary btn-lg" href="#" target="_blank" rel="noopener">Download Resume</a>
+              <a class="btn btn-outline-secondary btn-lg" href="Polina Lipskaya - Resume.pdf" target="_blank" rel="noopener">Download Resume</a>
             </div>
           </div>
           <div class="col-12 col-lg-5 text-center text-lg-end">
