--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <h5 class="fw-semibold mb-3">Quick Links</h5>
               <div class="d-grid gap-2">
                 <a class="btn btn-outline-primary" href="#projects"><i class="bi bi-kanban"></i> View Projects</a>
-                <a class="btn btn-outline-secondary" href="#" target="_blank" rel="noopener"><i class="bi bi-file-earmark-arrow-down"></i> Download Resume (PDF)</a>
+                <a class="btn btn-outline-secondary" href="https://github.com/polina-lipskaya/polina/blob/main/Polina%20Lipskaya%20-%20Resume.pdf" target="_blank" rel="noopener"><i class="bi bi-file-earmark-arrow-down"></i> Download Resume (PDF)</a>
                 <a class="btn btn-outline-dark" href="https://www.linkedin.com/in/polinalipskaya" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i> Connect on LinkedIn</a>
               </div>
             </div>
