--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="col-12 col-lg-5 text-center text-lg-end">
             <!-- Placeholder avatar; replace src with a real photo when ready -->
-            <img class="avatar" src="https://placehold.co/220x220" alt="Polina portrait placeholder" />
+            <img class="avatar" src="https://github.com/polina-lipskaya/polina/blob/main/IMG_0087.JPG" alt="Polina portrait placeholder" />
           </div>
         </div>
       </div>
@@ -182,7 +182,7 @@
         <h2 class="section-title mb-3">Contact</h2>
         <p class="lead">Interested in working together or have a question? I’d love to hear from you.</p>
         <ul class="list-unstyled fs-5">
-          <li class="mb-2"><i class="bi bi-envelope"></i> <a href="mailto:polinalipskaya2021@gmail.com">polina</a>a></li>
+          <li class="mb-2"><i class="bi bi-envelope"></i> <a href="mailto:polinalipskaya2021@gmail.com">polinalipskaya2021@gmail.com</a></li>
           <li><i class="bi bi-linkedin"></i> <a href="https://www.linkedin.com/in/polinalipskaya" target="_blank" rel="noopener">linkedin.com/in/polinalipskaya</a></li>
         </ul>
       </div>
