--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-5 text-center text-lg-end">
-            <!-- Placeholder avatar; replace src with a real photo when ready -->
-            <img class="avatar" src="https://github.com/polina-lipskaya/polina/blob/main/IMG_0087.JPG" alt="Polina portrait placeholder" />
+            <img class="avatar" src="IMG_0087.JPG" alt="Portrait" />
           </div>
         </div>
       </div>
