--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-5 text-center text-lg-end">
-            <img class="avatar" src="IMG_0087.JPG" alt="Portrait" />
+            <img class="avatar" src="https://github.com/polina-lipskaya/polina/blob/8061c12f650fb09dcbeabde220386bbe374e2634/IMG_0087.JPG" alt="Portrait" />
           </div>
         </div>
       </div>
