--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       .tagline { letter-spacing: .02em; }
       .avatar {
 width: 160px; height: 160px; border-radius: 50%; object-fit: cover;
-box-shadow: 0 8px 24px rgba(0,0,0,.08);
-}
+box-shadow: 0 8px 24px rgba(0,0,0,.08);}
       .section-title { font-weight: 700; }
       .pill { border:1px solid #e9ecef; border-radius: 999px; padding: .35rem .75rem; display:inline-flex; gap:.4rem; align-items:center }
       .lead { color: var(--muted); }
@@ -56,7 +55,7 @@ box-shadow: 0 8px 24px rgba(0,0,0,.08);
       </div>
     </nav>
 
-    <!-- Hero -->
+    <!-- Polina -->
     <header id="home" class="hero">
       <div class="container">
         <div class="row align-items-center g-5">
