--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
         background: linear-gradient(180deg, rgba(14,110,253,0.06), rgba(14,110,253,0));
       }
       .tagline { letter-spacing: .02em; }
+      /* Avatar: responsive sizes */
       .avatar {
-width: 160px; height: 160px; border-radius: 50%; object-fit: cover;
-box-shadow: 0 8px 24px rgba(0,0,0,.08);}
+        width: 160px; height: 160px; border-radius: 50%; object-fit: cover;
+        box-shadow: 0 8px 24px rgba(0,0,0,.08);
+      }
+      @media (min-width: 768px) {
+        .avatar { width: 200px; height: 200px; }
+      }
+      @media (min-width: 1200px) {
+        .avatar { width: 240px; height: 240px; }
+      }
       .section-title { font-weight: 700; }
       .pill { border:1px solid #e9ecef; border-radius: 999px; padding: .35rem .75rem; display:inline-flex; gap:.4rem; align-items:center }
       .lead { color: var(--muted); }
@@ -69,13 +77,13 @@ box-shadow: 0 8px 24px rgba(0,0,0,.08);}
             </div>
           </div>
           <div class="col-12 col-lg-5 text-center text-lg-end">
-            <img class="avatar" src="https://github.com/polina-lipskaya/polina/blob/8061c12f650fb09dcbeabde220386bbe374e2634/IMG_0087.JPG" alt="Portrait" />
+            <img class="avatar" src="IMG_0087.JPG" alt="Portrait of Polina Lipskaya" loading="lazy" />
           </div>
         </div>
       </div>
     </header>
 
-    <!-- Projects (cards with short summaries) -->
+    <!-- Projects (short summaries) -->
     <section id="projects" class="py-5">
       <div class="container">
         <div class="d-flex align-items-end justify-content-between mb-3">
@@ -202,4 +210,5 @@ box-shadow: 0 8px 24px rgba(0,0,0,.08);}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
