--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p class="lead mt-3">Hi, I’m Polina Lipskaya! I enhance healthcare operations through data-driven insights and strategic planning. I build systems that optimize performance, streamline processes, and uncover insights that drive better outcomes for patients and members.</p>
             <div class="d-flex gap-3 mt-4">
               <a class="btn btn-primary btn-lg" href="#projects">View My Work</a>
-              <a class="btn btn-outline-secondary btn-lg" href="https://github.com/polina-lipskaya/polina/blob/main/Polina%20Lipskaya%20-%20Resume.pdf" target="_blank" rel="noopener">Download Resume</a>
+              <a class="btn btn-outline-secondary btn-lg" href="https://polina-lipskaya.github.io/polina/Polina%20Lipskaya%20-%20Resume.pdf" target="_blank" rel="noopener">Download Resume</a>
             </div>
           </div>
           <div class="col-12 col-lg-5 text-center text-lg-end">
@@ -173,7 +173,7 @@
               <h5 class="fw-semibold mb-3">Quick Links</h5>
               <div class="d-grid gap-2">
                 <a class="btn btn-outline-primary" href="#projects"><i class="bi bi-kanban"></i> View Projects</a>
-                <a class="btn btn-outline-secondary" href="https://github.com/polina-lipskaya/polina/blob/main/Polina%20Lipskaya%20-%20Resume.pdf" target="_blank" rel="noopener"><i class="bi bi-file-earmark-arrow-down"></i> Download Resume (PDF)</a>
+                <a class="btn btn-outline-secondary" href="https://polina-lipskaya.github.io/polina/Polina%20Lipskaya%20-%20Resume.pdf" target="_blank" rel="noopener"><i class="bi bi-file-earmark-arrow-down"></i> Download Resume (PDF)</a>
                 <a class="btn btn-outline-dark" href="https://www.linkedin.com/in/polinalipskaya" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i> Connect on LinkedIn</a>
               </div>
             </div>
