--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-5 text-center text-lg-end">
-            <img class="avatar" src="IMG_0087.JPG" alt="Portrait of Polina Lipskaya" loading="lazy" />
+            <img class="avatar" src="https://polina-lipskaya.github.io/polina/IMG_0087.JPG?v=2" alt="Portrait of Polina" loading="lazy" />
           </div>
         </div>
       </div>
